docs: added links

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -6,14 +6,20 @@ Twapi is a suite of packages that interact with twitch's backend services using 
 
 ## Guides
 
-| Package                         | Description                   |
-| :------------------------------ | :---------------------------- |
-| [EventSub](eventsub/quickstart) | Interact with twitch eventsub |
-| [Helix Api](helix/quickstart)   | Call the twitch helix api     |
-| [PubSub](pubsub/quickstart)     | Interact with twitch pubsub   |
-| [Chat](chat/quickstart)         | Interact with twitch irc chat |
+| <div style={{ width: "300px" }}>Package</div>                     | <div style={{ width: "350px" }}>Package</div> |
+| :---------------------------------------------------------------- | :----------------------------                 |
+| [EventSub](eventsub/quickstart)                                   | Interact with twitch eventsub                 |
+| [Helix Api](helix/quickstart)                                     | Call the twitch helix api                     |
+| [PubSub](pubsub/quickstart)                                       | Interact with twitch pubsub                   |
+| [Chat](chat/quickstart)                                           | Interact with twitch irc chat                 |
 
 <Callout>
   We tried to leverage typescript the most so it is **recommended** to use
   typescript with any of the above libraries.
 </Callout>
+
+
+## Useful Links
+- Twitch official [documentation](https://dev.twitch.tv/docs)
+- Twitch official documentation for [oauth](https://dev.twitch.tv/docs/authentication/getting-tokens-oauth)
+- Ofiicial [github repository](https://github.com/fero1xd/twapi)
