--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -6,7 +6,7 @@ Twapi is a suite of packages that interact with twitch's backend services using 
 
 ## Guides
 
-| <div style={{ width: "300px" }}>Package</div>                     | <div style={{ width: "350px" }}>Package</div> |
+| <div style={{ width: "300px" }}>Package</div>                     | <div style={{ width: "350px" }}>Docs</div> |
 | :---------------------------------------------------------------- | :----------------------------                 |
 | [EventSub](eventsub/quickstart)                                   | Interact with twitch eventsub                 |
 | [Helix Api](helix/quickstart)                                     | Call the twitch helix api                     |
