@twapi/docs: updated pubsub docs

--- a/docs/pages/eventsub/quickstart.mdx
+++ b/docs/pages/eventsub/quickstart.mdx
@@ -46,7 +46,7 @@ which requires an user access token for subscribing to events.
 Follow these links to obtain your own credentials
 
 - [Twitch Developer Console](https://dev.twitch.tv/console)
-- [Twitch Oauth](https://dev.twitch.tv/docs/authentication/getting-tokens-oauth/)
+- [Twitch OAuth](https://dev.twitch.tv/docs/authentication/getting-tokens-oauth/)
 
 ### Connect to Twitch Event Sub
 
