--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -6,20 +6,22 @@ Twapi is a suite of packages that interact with twitch's backend services using 
 
 ## Guides
 
-| <div style={{ width: "300px" }}>Package</div>                     | <div style={{ width: "350px" }}>Docs</div> |
-| :---------------------------------------------------------------- | :----------------------------                 |
-| [EventSub](eventsub/quickstart)                                   | Interact with twitch eventsub                 |
-| [Helix Api](helix/quickstart)                                     | Call the twitch helix api                     |
-| [PubSub](pubsub/quickstart)                                       | Interact with twitch pubsub                   |
-| [Chat](chat/quickstart)                                           | Interact with twitch irc chat                 |
+Active development of most packages is still going on.
+
+| Package                         | Description                   |
+| :------------------------------ | :---------------------------- |
+| [EventSub](eventsub/introduction) | Interact with twitch eventsub |
+| [Helix Api](helix/quickstart)   | Call the twitch helix api     |
+| [PubSub](pubsub/introduction)   | Interact with twitch pubsub   |
+| [Chat](chat/quickstart)         | Interact with twitch irc chat |
 
 <Callout>
   We tried to leverage typescript the most so it is **recommended** to use
   typescript with any of the above libraries.
 </Callout>
 
-
 ## Useful Links
+
 - Twitch official [documentation](https://dev.twitch.tv/docs)
-- Twitch official documentation for [oauth](https://dev.twitch.tv/docs/authentication/getting-tokens-oauth)
+- Twitch official documentation for [OAuth](https://dev.twitch.tv/docs/authentication/getting-tokens-oauth)
 - Ofiicial [github repository](https://github.com/fero1xd/twapi)
