--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -10,6 +10,7 @@ Active development of most packages is still going on.
 
 | Package                         | Description                   |
 | :------------------------------ | :---------------------------- |
+| [Authentication](auth/introduction) | Shared package used for authentication |
 | [EventSub](eventsub/introduction) | Interact with twitch eventsub |
 | [Helix Api](helix/quickstart)   | Call the twitch helix api     |
 | [PubSub](pubsub/introduction)   | Interact with twitch pubsub   |
